--- a/erlang/my_erlang/release/example-package/basestation.rel.template
+++ b/erlang/my_erlang/release/example-package/basestation.rel.template
@@ -4,4 +4,5 @@
  [{kernel, "kernel_version"},
   {stdlib, "stdlib_version"},
   {sasl, "sasl_version"},
+  {erts, "erts_version"},
   {bsc, "1.0"}]}.
