--- a/erlang/my_erlang/release/example-package/Makefile
+++ b/erlang/my_erlang/release/example-package/Makefile
@@ -24,5 +24,5 @@ compile:${MODS:%=%.beam}
 #	erl -noshell -s $(RUN_BIN) start  -s init stop
 
 clean:
-	rm -rf rm *.script *.boot *.beam ernie
+	rm -rf rm *.script *.boot *.beam ernie start.sh  basestation.rel  handle_release.erl
 	cd bsc/src && make clean
