--- a/erlang/my_erlang/release/example-package/handle_release.erl.template
+++ b/erlang/my_erlang/release/example-package/handle_release.erl.template
@@ -8,5 +8,6 @@ start() ->
     % 生成boot和script文件, 这里不会关心beam文件
     systools:make_script("basestation", [{path, ["bsc/ebin"]}]),
     % 生成tar包, 这里需要使用beam文件
-	systools:make_tar("basestation",[{erts, "/home/ericksun/program/otp-25.0.4/lib/erlang"}, {path, ["bsc/ebin"]}, {outdir, "ernie"}]),
+	systools:make_tar("basestation",[{erts, "ERLANG_DIR_NAME"}, {path, ["bsc/ebin"]}, {outdir, "ernie"}]),
+	%systools:make_tar("basestation",[{erts, "/home/ericksun/program/otp-25.0.4/lib/erlang"}, {path, ["bsc/ebin"]}, {outdir, "ernie"}]),
 	'this is an end'.
