--- a/erlang/my_erlang/application/ch9/bsc.config
+++ b/erlang/my_erlang/application/ch9/bsc.config
@@ -1,2 +1,2 @@
-[{sasl, [{errlog_type, error}, {sasl_error_logger, tty}]},
+[{sasl, [{errlog_type, all}, {sasl_error_logger, tty}]},
  {bsc,  [{frequencies, [1,2,3,4,5,6]}]}].
