--- a/erlang/my_erlang/application/ch9/rb.config
+++ b/erlang/my_erlang/application/ch9/rb.config
@@ -2,4 +2,4 @@
 	 {error_logger_mf_dir, "."},
 	 {error_logger_mf_maxbytes, 20000},
 	 {error_logger_mf_maxfiles, 5}]},
- {bsc,  [{frequencies, crash}]}].
+ {bsc,  [{frequencies, [1,2,3,4,5,6]}]}].
