--- a/erlang/my_erlang/rebar3/lager_example/rebar.config
+++ b/erlang/my_erlang/rebar3/lager_example/rebar.config
@@ -1,9 +1,13 @@
 {erl_opts, [debug_info]}.
-{deps, []}.
+{deps, [
+        lager
+       ]
+}.
 
 {relx, [{release, {lager_example, "0.1.0"},
          [lager_example,
-          sasl]},
+          sasl
+         ]},
 
         {mode, dev},
 
