--- a/erlang/my_erlang/gen_event/gen_event_rebar3/rebar.config
+++ b/erlang/my_erlang/gen_event/gen_event_rebar3/rebar.config
@@ -1,5 +1,7 @@
 {erl_opts, [debug_info]}.
-{deps, []}.
+{deps, [
+        recon
+]}.
 
 {relx, [{release, {gen_event_rebar3, "0.1.0"},
          [gen_event_rebar3,
