--- a/erlang/my_erlang/rebar3/xprof_use_debug/rebar.config
+++ b/erlang/my_erlang/rebar3/xprof_use_debug/rebar.config
@@ -1,5 +1,11 @@
 {erl_opts, [debug_info]}.
-{deps, []}.
+{deps, [
+       {xprof, "1.3.0"},
+       {cowlib, "2.11.0"},
+	   {cowboy, "2.9.0"},
+       {jsone, "1.7.0"},
+	   {customized_hdr_histogram, "0.3.2"}
+       ]}.
 
 {relx, [{release, {xprof_use_debug, "0.1.0"},
          [xprof_use_debug,
