--- a/erlang/my_erlang/upgrade/ch12/ernie/Makefile
+++ b/erlang/my_erlang/upgrade/ch12/ernie/Makefile
@@ -9,18 +9,26 @@ ERL = erl -boot start_clean
 
 MODS := $(patsubst %.erl,%, $(wildcard *.erl))
 
-RUN_BIN=gen_release
-all:compile
+RELEASE_NAME=coffee
+
+RUN_BIN=handle_release
+all:dir_name compile
 	erl -noshell -s $(RUN_BIN) start -s init stop
-	#erl -noshell -run $(RUN_BIN) start -s init stop
-	#erl -noshell -s nano_server start client -s init stop
+	cp start.sh ${RELEASE_NAME}_heart ${RELEASE_NAME}_release 
+
+dir_name:
+	bash find_the_version.sh
+
+compile:${MODS:%=%.beam}
+	erlc $(RUN_BIN).erl
+	mkdir -p ${RELEASE_NAME}_release
+	cd ${RELEASE_NAME}/src && make 
 
 
-compile:${MODS:%=%.beam} 
-#	mkdir -p ernie
-#
 #RUN_BIN=hello
 #run:
 #	erl -noshell -s $(RUN_BIN) start  -s init stop
+
 clean:
-	rm  -rf *.beam
+	rm -rf rm *.script *.boot *.beam ${RELEASE_NAME}_release start.sh  ${RELEASE_NAME}.rel 
+	cd ${RELEASE_NAME}/src && make clean
