--- a/erlang/my_erlang/upgrade/ch12/ernie/coffee-1.0.rel.template
+++ b/erlang/my_erlang/upgrade/ch12/ernie/coffee-1.0.rel.template
@@ -4,4 +4,5 @@
  [{kernel, "kernel_version"},
   {stdlib, "stdlib_version"},
   {sasl, "sasl_version"},
-  {erts, "erts_version"}]}.
+  {erts, "erts_version"},
+  {coffee, "1.0"}]}.
