--- a/erlang/my_erlang/upgrade/ch12/ernie/Makefile
+++ b/erlang/my_erlang/upgrade/ch12/ernie/Makefile
@@ -23,7 +23,7 @@ dir_name:
 
 compile:${MODS:%=%.beam}
 	erlc $(RUN_BIN).erl
-	mkdir -p ${RELEASE_NAME}_release
+	mkdir -p ${RELEASE_NAME}_release/releases
 	cd ${RELEASE_NAME}/src && make 
 	cd ${RELEASE_NAME_UPGRADE}/src && make 
 
