--- a/erlang/my_erlang/upgrade/ch12/ernie_upgrade/Makefile
+++ b/erlang/my_erlang/upgrade/ch12/ernie_upgrade/Makefile
@@ -16,7 +16,7 @@ RUN_BIN=handle_release
 all:dir_name compile
 	erl -noshell -s $(RUN_BIN) start -s init stop
 	#cp start.sh ${RELEASE_NAME}_heart ${RELEASE_NAME}_release 
-	cp start.sh create_releases.erl  ${RELEASE_NAME}_release 
+	cp start.sh create_releases.erl install_release.erl ${RELEASE_NAME}_release 
 
 dir_name:
 	bash find_the_version.sh
