rebar3Coffee coffee

--- a/erlang/my_erlang/upgrade/ch12/rebar3Coffee/coffee/rebar.config
+++ b/erlang/my_erlang/upgrade/ch12/rebar3Coffee/coffee/rebar.config
@@ -1,11 +1,14 @@
-{erl_opts, [debug_info]}.
+{erl_opts, [debug_info, {parse_transform, lager_transform},   {verbosity, trace}]}.
 {deps, []}.
 
 {relx, [{release, {coffee, "0.1.0"},
          [coffee,
           sasl]},
 
-        {mode, dev},
+        %{mode, dev},
+        {dev_mode, false},
+        {include_erts, true},
+        {extended_start_script, true},
 
         %% automatically picked up if the files
         %% exist but can be set manually, which
@@ -20,13 +23,20 @@
         %% {vm_args_src, "./config/vm.args.src"}
 ]}.
 
-{profiles, [{prod, [{relx,
-                     [%% prod is the default mode when prod
-                      %% profile is used, so does not have
-                      %% to be explicitly included like this
-                      {mode, prod}
+%{profiles, [{prod, [{relx,
+%                     [%% prod is the default mode when prod
+%                      %% profile is used, so does not have
+%                      %% to be explicitly included like this
+%                      {mode, prod}
+%
+%                      %% use minimal mode to exclude ERTS
+%                      %% {mode, minimal}
+%                     ]
+%            }]}]}.
+%}.
 
-                      %% use minimal mode to exclude ERTS
-                      %% {mode, minimal}
-                     ]
-            }]}]}.
+{profiles, [{prod, [{relx, [{dev_mode, false},
+                            {include_erts, true}]}]
+            }]
+}.
+
