--- a/erlang/my_erlang/upgrade/ch12/coffee/rebar.config
+++ b/erlang/my_erlang/upgrade/ch12/coffee/rebar.config
@@ -1,13 +1,11 @@
 {erl_opts, [debug_info]}.
 {deps, []}.
 
-{relx, [{release, {coffee, "0.2.0"},
+{relx, [{release, {coffee, "1.1"},
          [coffee,
           sasl]},
 
-        %{mode, dev},
-        {dev_mode, false}
-
+        {mode, dev},
 
         %% automatically picked up if the files
         %% exist but can be set manually, which
@@ -22,17 +20,13 @@
         %% {vm_args_src, "./config/vm.args.src"}
 ]}.
 
-{profiles, [{prod, [{relx, [{dev_mode, false}]}]
-	            }]
-}.
+{profiles, [{prod, [{relx,
+                     [%% prod is the default mode when prod
+                      %% profile is used, so does not have
+                      %% to be explicitly included like this
+                      {mode, prod}
 
-%{profiles, [{prod, [{relx,
-%                     [%% prod is the default mode when prod
-%                      %% profile is used, so does not have
-%                      %% to be explicitly included like this
-%                      {mode, prod}
-%
-%                      %% use minimal mode to exclude ERTS
-%                      %% {mode, minimal}
-%                     ]
-%            }]}]}.
+                      %% use minimal mode to exclude ERTS
+                      %% {mode, minimal}
+                     ]
+            }]}]}.
