--- a/erlang/my_erlang/upgrade/ch12/ernie_rebar3/coffee/rebar.config
+++ b/erlang/my_erlang/upgrade/ch12/ernie_rebar3/coffee/rebar.config
@@ -5,7 +5,8 @@
          [coffee,
           sasl]},
 
-        {mode, dev},
+        %{mode, dev},
+        {dev_mode, false},
 
         %% automatically picked up if the files
         %% exist but can be set manually, which
@@ -24,7 +25,8 @@
                      [%% prod is the default mode when prod
                       %% profile is used, so does not have
                       %% to be explicitly included like this
-                      {mode, prod}
+                      %{mode, prod}
+                      {dev_mode, false}
 
                       %% use minimal mode to exclude ERTS
                       %% {mode, minimal}
