--- a/rabbitmq_erlang_client/rebar3/amqp_client_hello/rebar.config
+++ b/rabbitmq_erlang_client/rebar3/amqp_client_hello/rebar.config
@@ -1,9 +1,13 @@
 {erl_opts, [debug_info]}.
 {deps, [
-	amqp_client
+	{amqp_client, "3.11.5"}
 ]}.
-
 {shell, [
   % {config, "config/sys.config"},
     {apps, [amqp_client_hello]}
 ]}.
+
+%{deps, [
+%	amqp_client
+%]}.
+
