achive to zip file

--- a/erlang/my_erlang/application_learn_you/rebar3_pool/rebar.config
+++ b/erlang/my_erlang/application_learn_you/rebar3_pool/rebar.config
@@ -5,3 +5,7 @@
   % {config, "config/sys.config"},
     {apps, [rebar3_pool]}
 ]}.
+{plugins, [
+    %{rebar3_archive_plugin, {git, "git@github.com:deadtrickster/rebar3_archive_plugin.git", {branch, "master"}}}
+    {rebar3_archive_plugin, "0.0.2"}
+]}.
