--- a/rabbitmq_erlang_client/rebar3/amqp_client_hello/rebar.config
+++ b/rabbitmq_erlang_client/rebar3/amqp_client_hello/rebar.config
@@ -1,6 +1,7 @@
 {erl_opts, [debug_info]}.
 {deps, [
-	{amqp_client, "3.11.5"}
+    {amqp_client, "3.11.5"},
+    {recon, "2.5.3"}
 ]}.
 {shell, [
   % {config, "config/sys.config"},
