--- a/rabbitmq_erlang_client/rabbitmq-tutorials-my/erlang/subscribe/rebar.config
+++ b/rabbitmq_erlang_client/rabbitmq-tutorials-my/erlang/subscribe/rebar.config
@@ -1,5 +1,8 @@
 {erl_opts, [debug_info]}.
-{deps, []}.
+{deps, [
+    {amqp_client, "3.11.5"},
+    {recon, "2.5.3"}
+]}.
 
 {shell, [
   % {config, "config/sys.config"},
