--- a/erlang/my_erlang/erlang.mk/hello_erlang/Makefile
+++ b/erlang/my_erlang/erlang.mk/hello_erlang/Makefile
@@ -1,6 +1,6 @@
-PROJECT = hello_bootstrap_rel
+PROJECT = hello_erlang
 PROJECT_DESCRIPTION = New project
 PROJECT_VERSION = 0.1.0
 
-#BUILD_DEPS += relx
+BUILD_DEPS += relx
 include erlang.mk
