--- a/erlang/my_erlang/erlang.mk/hello_erlang/Makefile
+++ b/erlang/my_erlang/erlang.mk/hello_erlang/Makefile
@@ -2,5 +2,14 @@ PROJECT = hello_erlang
 PROJECT_DESCRIPTION = New project
 PROJECT_VERSION = 0.1.0
 
-BUILD_DEPS += relx
+
+DEPS = cowboy
+dep_cowboy_commit = 2.7.0
+
+DEP_PLUGINS = cowboy
+
+#BUILD_DEPS += relx
 include erlang.mk
+
+
+
