--- a/erlang/my_erlang/erlang.mk/hello_joe/Makefile
+++ b/erlang/my_erlang/erlang.mk/hello_joe/Makefile
@@ -2,5 +2,5 @@ PROJECT = hello_joe
 PROJECT_DESCRIPTION = New project
 PROJECT_VERSION = 0.1.0
 
-BUILD_DEPS += relx
+#BUILD_DEPS += relx
 include erlang.mk
