--- a/erlang/my_erlang/erlang.mk/hello_erlang_deps/Makefile
+++ b/erlang/my_erlang/erlang.mk/hello_erlang_deps/Makefile
@@ -2,4 +2,6 @@ PROJECT = hello_erlang_deps
 PROJECT_DESCRIPTION = New project
 PROJECT_VERSION = 0.1.0
 
+#APPS_DIR := $(CURDIR)/apps
+
 include erlang.mk
