erlang.mk release of cowboy

--- a/erlang/my_erlang/erlang.mk/hello_release/Makefile
+++ b/erlang/my_erlang/erlang.mk/hello_release/Makefile
@@ -2,5 +2,19 @@ PROJECT = hello_release
 PROJECT_DESCRIPTION = New project
 PROJECT_VERSION = 0.1.0
 
-BUILD_DEPS += relx
+BUILD_DEPS += bbmustache relx
+dep_bbmustache = git https://github.com/soranoba/bbmustache.git master
+dep_relx = git https://github.com/erlware/relx.git  main
+
+
+#BUILD_DEPS += bbmustache relx
+#dep_bbmustache = git https://github.com/soranoba/bbmustache.git 31e94ffd9618accd8e6604c7d5c3235363f5c5dd #v1.12.2 
+#dep_relx = git https://github.com/erlware/relx.git  fc931c42a4f18a9bc20064fb1d54c386463b9596 #dep_relx_commit = v4.7.0 
+
+
+#BUILD_DEPS += bbmustache relx
+#dep_bbmustache = hex 1.12.2
+#dep_relx = hex 4.7.0
+
+
 include erlang.mk
