--- a/erlang/my_erlang/rebar3/hellorebar3/rebar.config
+++ b/erlang/my_erlang/rebar3/hellorebar3/rebar.config
@@ -1,8 +1,7 @@
 {erl_opts, [debug_info]}.
 {deps, [
-	{cowboy, "2.6.3"},
-    {amqp_client, "3.9.11"},
-    {cowboy, {git, "https://github.com/ninenines/cowboy.git", {tag, "2.6.3"}}} % alternatively, source
+    {relx, {git, "https://github.com/erlware/relx.git", {tag, main}}},
+    {bbmustache, {git, "https://github.com/soranoba/bbmustache.git", {tag, master}}}
 ]}.
 
 {shell, [
