--- a/erlang/my_erlang/erlang.mk/hello_release_apps_dir/apps/webchat/Makefile
+++ b/erlang/my_erlang/erlang.mk/hello_release_apps_dir/apps/webchat/Makefile
@@ -2,6 +2,12 @@ PROJECT = webchat
 PROJECT_DESCRIPTION = New project
 PROJECT_VERSION = 0.1.0
 
+
+include ../../../../rabbitmq-components.mk
+include ../../../../erlang.mk
+
+
+
 # Make sure we know where the applications are located.
 ROOT_DIR ?= ../..
 APPS_DIR ?= ..
