rabbit erlang.mk

--- a/erlang/my_erlang/erlang.mk/apps_dir_deps_out_project/deps/myproject/Makefile
+++ b/erlang/my_erlang/erlang.mk/apps_dir_deps_out_project/deps/myproject/Makefile
@@ -4,8 +4,11 @@ PROJECT_VERSION = 0.1.0
 
 
 APPS_DIR := $(CURDIR)/apps
+
 LOCAL_DEPS = webchat
 
 DEPS = recon
 
 include ../../erlang.mk
+include ../../rabbitmq-components.mk
+
