--- a/erlang/my_erlang/erlang.mk/apps_dir_deps_out_project/deps/myproject/apps/webchat/Makefile
+++ b/erlang/my_erlang/erlang.mk/apps_dir_deps_out_project/deps/myproject/apps/webchat/Makefile
@@ -9,7 +9,10 @@ DEPS_DIR ?= ../../deps
 
 DEPS = cowboy
 
-include $(ROOT_DIR)/erlang.mk
-include $(ROOT_DIR)/rabbitmq-components.mk
+include ../../../../rabbitmq-components.mk
+include ../../../../erlang.mk
+
+#include $(ROOT_DIR)/erlang.mk
+#include $(ROOT_DIR)/rabbitmq-components.mk
 
 
