--- a/erlang/my_erlang/erlang.mk/rabbit-server-project-1/Makefile
+++ b/erlang/my_erlang/erlang.mk/rabbit-server-project-1/Makefile
@@ -2,7 +2,8 @@ PROJECT = rabbitmq_server_release
 PROJECT_DESCRIPTION = RabbitMQ Server
 
 
-DEPS = rabbit 
+DEPS = rabbit  myproject
+#DEPS = myproject
 
 include rabbitmq-components.mk
 include erlang.mk
