--- a/erlang/my_erlang/erlang.mk/apps_dir_deps_out_project/deps/myproject/Makefile
+++ b/erlang/my_erlang/erlang.mk/apps_dir_deps_out_project/deps/myproject/Makefile
@@ -7,8 +7,10 @@ APPS_DIR := $(CURDIR)/apps
 
 LOCAL_DEPS = webchat
 
-DEPS = recon
+#DEPS = recon
 
-include ../../erlang.mk
+
+## 顺序非常非常的重要，不然直接不能带动起来
 include ../../rabbitmq-components.mk
+include ../../erlang.mk
 
