--- a/erlang/my_erlang/erlang.mk/apps_dir_deps_out_project/deps/myproject/apps/webchat/Makefile
+++ b/erlang/my_erlang/erlang.mk/apps_dir_deps_out_project/deps/myproject/apps/webchat/Makefile
@@ -7,7 +7,7 @@ ROOT_DIR ?= ../../../..
 APPS_DIR ?= ..
 DEPS_DIR ?= ../../deps
 
-DEPS = cowboy
+#DEPS = cowboy
 
 include ../../../../rabbitmq-components.mk
 include ../../../../erlang.mk
