--- a/erlang/my_erlang/erlang.mk/apps_dir_deps_out_project/Makefile
+++ b/erlang/my_erlang/erlang.mk/apps_dir_deps_out_project/Makefile
@@ -2,10 +2,8 @@ PROJECT = apps_dir_deps_out_project
 PROJECT_DESCRIPTION = New project
 PROJECT_VERSION = 0.1.0
 
-
-#DEPS = rabbit cowboy cowlib ranch recon
-#DPES = myproject
-LOCAL_DEPS = myproject
+DEPS = myproject
+#LOCAL_DEPS = myproject  # 用这个不能生效 必须用 DEPS
 
 
 include rabbitmq-components.mk
