--- a/erlang/my_erlang/erlang.mk/apps_dir_deps_out_project.2/deps/myproject/apps/webchat/Makefile
+++ b/erlang/my_erlang/erlang.mk/apps_dir_deps_out_project.2/deps/myproject/apps/webchat/Makefile
@@ -2,9 +2,9 @@ PROJECT = webchat
 PROJECT_DESCRIPTION = New project
 PROJECT_VERSION = 0.1.0
 
-DEPS = cowboy
-dep_cowboy_commit = 2.7.0
-DEP_PLUGINS = cowboy
+#DEPS = cowboy
+#dep_cowboy_commit = 2.7.0
+#DEP_PLUGINS = cowboy
 
 # Make sure we know where the applications are located.
 ROOT_DIR ?= ../../../..
