--- a/erlang/my_erlang/erlang.mk/apps_dir_deps_out_project.2/deps/myproject/apps/webchat/Makefile
+++ b/erlang/my_erlang/erlang.mk/apps_dir_deps_out_project.2/deps/myproject/apps/webchat/Makefile
@@ -2,7 +2,7 @@ PROJECT = webchat
 PROJECT_DESCRIPTION = New project
 PROJECT_VERSION = 0.1.0
 
-#DEPS = cowboy
+DEPS = cowboy
 #dep_cowboy_commit = 2.7.0
 #DEP_PLUGINS = cowboy
 
@@ -11,4 +11,7 @@ ROOT_DIR ?= ../../../..
 APPS_DIR ?= ..
 DEPS_DIR ?= ../../deps
 
-include $(ROOT_DIR)/erlang.mk
+#include $(ROOT_DIR)/erlang.mk
+include ../../../../rabbitmq-components.mk
+include ../../../../erlang.mk
+
