--- a/erlang/my_erlang/erlang.mk/apps_dir_deps_out_project.2/Makefile
+++ b/erlang/my_erlang/erlang.mk/apps_dir_deps_out_project.2/Makefile
@@ -4,8 +4,9 @@ PROJECT_VERSION = 0.1.0
 
 
 #DEPS = rabbit cowboy cowlib ranch recon
-DEPS = myproject 
-#LOCAL_DEPS = myproject
+DEPS = myproject cowboy
+dep_cowboy_commit = 2.7.0
+DEP_PLUGINS = cowboy
 
 include rabbitmq-components.mk
 include erlang.mk
