--- a/erlang/my_erlang/erlang.mk/apps_dir_deps_out_project.2/deps/myproject/Makefile
+++ b/erlang/my_erlang/erlang.mk/apps_dir_deps_out_project.2/deps/myproject/Makefile
@@ -7,9 +7,10 @@ APPS_DIR := $(CURDIR)/apps
 
 LOCAL_DEPS = webchat
 
-DEPS = cowboy
-dep_cowboy_commit = 2.7.0
-DEP_PLUGINS = cowboy
+# 在上层已经声明过
+#DEPS = cowboy
+#dep_cowboy_commit = 2.7.0
+#DEP_PLUGINS = cowboy
 
 
 ## 顺序非常非常的重要，不然直接不能带动起来
