--- a/erlang/my_erlang/erlang.mk/apps_dir_deps_out_project.2/deps/myproject/apps/webchat/Makefile
+++ b/erlang/my_erlang/erlang.mk/apps_dir_deps_out_project.2/deps/myproject/apps/webchat/Makefile
@@ -7,9 +7,9 @@ DEPS = cowboy
 #DEP_PLUGINS = cowboy
 
 # Make sure we know where the applications are located.
-ROOT_DIR ?= ../../../..
-APPS_DIR ?= ..
-DEPS_DIR ?= ../../deps
+#ROOT_DIR ?= ../../../..
+#APPS_DIR ?= ..
+#DEPS_DIR ?= ../../deps  # 这个不要加，不然会影响它的更上一层的
 
 #include $(ROOT_DIR)/erlang.mk
 include ../../../../rabbitmq-components.mk
