--- a/erlang/my_erlang/net_ticktime/ticktime/config/sys1.config
+++ b/erlang/my_erlang/net_ticktime/ticktime/config/sys1.config
@@ -1,5 +1,6 @@
 [
  {kernel, [
+	     {logger_sasl_compatible,  true},
          {inet_dist_listen_min, 25672},
          {inet_dist_listen_max, 25680},
          {net_ticktime, 360},
