--- a/erlang/my_erlang/net_ticktime/ticktime/rebar.config
+++ b/erlang/my_erlang/net_ticktime/ticktime/rebar.config
@@ -1,5 +1,8 @@
 {erl_opts, [debug_info]}.
-{deps, []}.
+{deps, [
+        {recon, "2.5.2"},
+		{observer_cli, "1.7.3"}
+]}.
 
 {shell, [
     {config, "config/sys.config"},
