--- a/erlang/my_erlang/erlang.mk/hello_erlang_mk_1/Makefile
+++ b/erlang/my_erlang/erlang.mk/hello_erlang_mk_1/Makefile
@@ -2,4 +2,10 @@ PROJECT = hello_erlang_mk_1
 PROJECT_DESCRIPTION = New project
 PROJECT_VERSION = 0.1.0
 
+
+TEST:
+	@echo $(ERLANG_MK_FILENAME)
+	@echo $(MAKEFILE_LIST)
+	@echo $(lastword $(MAKEFILE_LIST))
+	@echo $(realpath $(lastword $(MAKEFILE_LIST)))
 include erlang.mk
