--- a/linux/automake/helloworld-man/configure.ac
+++ b/linux/automake/helloworld-man/configure.ac
@@ -2,15 +2,15 @@
 # Process this file with autoconf to produce a configure script.
 
 #AC_PREREQ(2.57)
-AC_INIT(hellofuck, 1.0, mij@bitchx.it)
-#AM_INIT_AUTOMAKE(hellofuck, 1.0)
+AC_INIT(helloworld, 1.0, mij@bitchx.it)
+#AM_INIT_AUTOMAKE(helloworld, 1.0)
 #AM_INIT_AUTOMAKE
 #https://stackoverflow.com/questions/21773003/error-in-automake
 #Makefile.am: error: required file './NEWS' not found
 #Probably adding foreign to AM_INIT_AUTOMAKE macro in configure.ac could be helpful in this case.
 AM_INIT_AUTOMAKE([-Wall -Werror foreign])
 
-AC_CONFIG_SRCDIR([src/fuck.c])
+AC_CONFIG_SRCDIR([src/hello.c])
 
 # Checks for programs.
 AC_PROG_CC
