--- a/linux/automake/helloworld_ac_arg_with/amhello/configure.ac
+++ b/linux/automake/helloworld_ac_arg_with/amhello/configure.ac
@@ -6,6 +6,11 @@ AC_INIT([amhello], [1.0], [bug-automake@gnu.org])
 AM_INIT_AUTOMAKE([-Wall -Werror foreign])
 AC_PROG_CC
 AC_CONFIG_HEADERS([config.h])
+
+# --with-python[=DIR]     build Python bindings if found
+AC_ARG_WITH(python, [  --with-python[[=DIR]]     build Python bindings if found])
+
+
 AC_CONFIG_FILES([
  Makefile
  src/Makefile
