--- a/linux/automake/ac_define/configure.ac
+++ b/linux/automake/ac_define/configure.ac
@@ -10,7 +10,15 @@ AC_CONFIG_HEADERS([config.h])
 
 #AC_DEFINE(HELLO,)
 
-#AC_DEFINE(MY_VERSION, "5.6.7.8.9")
+#MY_VERSION="0.1.1.1"
+# Checks for command line options
+AC_ARG_ENABLE([async-exec],
+[  --disable-async-exec disable async execution feature],
+[MY_VERSION=${enableval}], [MY_VERSION=yes])
+
+AC_DEFINE(MY_VERSION, "5.6.7.8.9")
+
+
 AC_DEFINE(VERSION, "5.6.7.8.9")
 
 myvar="foo"
