--- a/linux/automake/jupiter/src/Makefile.am
+++ b/linux/automake/jupiter/src/Makefile.am
@@ -1,4 +1,5 @@
 bin_PROGRAMS = jupiter
+AM_CFLAGS = -std=c99
 jupiter_SOURCES = main.c 
-jupiter_CPPFLAGS = -I$(top_srcdir)/common #product option variables (POVs)
+jupiter_CPPFLAGS = $(AM_CFLAGS)  -I$(top_srcdir)/common # product option variables (POVs)
 jupiter_LDADD = ../common/libjupcommon.a
