--- a/linux/libtool/jupiter_no_ltdl/configure.ac
+++ b/linux/libtool/jupiter_no_ltdl/configure.ac
@@ -18,7 +18,7 @@ AC_PROG_CC
 AC_PROG_INSTALL
 
 # Checks for header files.
-AC_CHECK_HEADERS([stdlib.h ltdl.h])
+AC_CHECK_HEADERS([stdlib.h dlfcn.h])
 
 # Checks for command-line options
 AC_ARG_ENABLE([async-exec],
@@ -54,7 +54,7 @@ fi
 # Checks for typedefs, structures, and compiler characteristics.
 
 # Checks for library functions.
-AC_SEARCH_LIBS([lt_dlopen], [ltdl])
+AC_SEARCH_LIBS([dlopen], [dl])
 
 AC_CONFIG_FILES([Makefile
                  common/Makefile
