--- a/linux/autotool/example/foonly-2.0/configure.ac
+++ b/linux/autotool/example/foonly-2.0/configure.ac
@@ -6,9 +6,11 @@ AC_INIT([foonly], [2.0], [gary@gnu.org])
 
 AM_INIT_AUTOMAKE([1.9 foreign])
 
+AC_CHECK_HEADERS([stdio.h stdlib.h], [break])
+
 AC_PROG_CC
 AM_PROG_LEX
-AC_PROG_YACC
+#AC_PROG_YACC
 
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
