--- a/makefile/make/automake_dir/common/Makefile.am
+++ b/makefile/make/automake_dir/common/Makefile.am
@@ -2,3 +2,7 @@ lib_LIBRARIES = libcounter.a
 libcounter_a_SOURCES = counter.c lexer.l
 libcounter_a_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/common
 
+
+#We use the CLEANFILES variable at to
+#extend the list of files that Automake deletes during make clean.
+CLEANFILES = lexer.c
