--- a/linux/autotool/example/foonly-2.0/Makefile.am
+++ b/linux/autotool/example/foonly-2.0/Makefile.am
@@ -25,3 +25,5 @@ bin_PROGRAMS = foonly
 foonly_SOURCES = main.c foo.c foo.h nly.c scanner.l parser.y
 foonly_LDADD = @LEXLIB@
 ## @end 1
+
+CLEANFILES =  parser.c scanner.c
