--- a/makefile/make/make_vpath/Makefile
+++ b/makefile/make/make_vpath/Makefile
@@ -18,8 +18,15 @@ counter.o: counter.c counter.h lexer.h
 lexer.o: lexer.c lexer.h
 	gcc $(CPPFLAGS) -c $< -o $@ 
 
-lexer.c: lexer.l
-	flex -t $< >$@ 
+#lexer.c: lexer.l
+#	flex -t $< >$@ 
+
+## 默认规则中就有 所以上面的规则可以省略
+#%.c: %.l
+##  recipe to execute (built-in):
+#	@$(RM) $@ 
+#	 $(LEX.l) $< > $@
+
 
 .PHONY:clean
 clean:
