--- a/makefile/make/make_pattern/Makefile4
+++ b/makefile/make/make_pattern/Makefile4
@@ -1,10 +1,14 @@
-CPPFLAGS=-I inlcude
-VPATH=src include
+VPATH = src include
+CPPFLAGS = -I include 
 
 count_words:counter.o  lexer.o -lfl
+
 count_words.o:counter.h
+
 counter.o:counter.h lexer.h
+
 lexer.o:lexer.h
+
 .PHONY:clean
 clean:
 	rm -f *.o lexer.c  count_words
