--- a/makefile/make/make_pattern/makefile3
+++ b/makefile/make/make_pattern/makefile3
@@ -1,23 +1,27 @@
-VPATH=src include
-#VPATH=src 
 
-# 本文件演示如何使用VPATH , 特别是指定头文件所在目录
+# 每一行只能一个，不能合并 比如 vpath %.l %.c src 
+vpath %.l src
+vpath %.c src
+vpath %.h include
 
-# 只指定下面这行，而VPATH中不包含include，是不可以的
-# 虽然这行可以再指定VPATH的情况下可以不加
-CPPFLAGS=-I inlcude 
+CPPFLAGS = -I include
 
-count_words:count_words.o counter.o lexer.o -lfl
-	gcc $^ -o $@
-count_words.o:count_words.c counter.h
-	gcc -c $< -o $@
-counter.o:counter.c counter.h lexer.h
-	gcc -c $< -o $@
-lexer.o:lexer.c lexer.h
-	gcc -c $< -o $@ 
-lexer.c:src/lexer.l
+# 因为用的不是默认规则，这里需要把 CPPFLAGS 显式的写到命令中
+count_words: count_words.o counter.o lexer.o -lfl
+	gcc $(CPPFLAGS) $^ -o $@
+
+count_words.o: count_words.c counter.h
+	gcc $(CPPFLAGS) -c $< 
+
+counter.o: counter.c counter.h lexer.h
+	gcc $(CPPFLAGS) -c $< -o $@
+
+lexer.o: lexer.c lexer.h
+	gcc $(CPPFLAGS) -c $< -o $@ 
+
+lexer.c: lexer.l
 	flex -t $< >$@ 
+
 .PHONY:clean
 clean:
 	rm -f *.o src/lexer.c count_words
-
