--- a/linux/autotool/gnulib_use/b64/m4/.gitignore
+++ b/linux/autotool/gnulib_use/b64/m4/.gitignore
@@ -14,3 +14,24 @@
 /string_h.m4
 /warn-on-use.m4
 /wchar_t.m4
+/c-bool.m4
+/calloc.m4
+/free.m4
+/inttypes.m4
+/limits-h.m4
+/locale-fr.m4
+/malloc.m4
+/multiarch.m4
+/off_t.m4
+/pid_t.m4
+/realloc.m4
+/reallocarray.m4
+/ssize_t.m4
+/std-gnu11.m4
+/stdint.m4
+/stdlib_h.m4
+/sys_types_h.m4
+/unistd_h.m4
+/wchar_h.m4
+/wint_t.m4
+/zzgnulib.m4
